@@ -18,10 +18,16 @@ import java.util.stream.Collectors;
 public class CourseServiceImpl implements CourseService {
 
     @Autowired
+    private PersonalInfoRepository personalInfoRepository;
+
+    @Autowired
+    private StudentRepository studentRepository;
+
+    @Autowired
     private SectionRepository sectionRepository;
 
     @Autowired
-    private TakeRepository takeRepository;
+    private CourseRepository courseRepository;
 
     @Autowired
     private GradeRepository gradeRepository;
@@ -51,66 +57,105 @@ public class CourseServiceImpl implements CourseService {
 
         return sections.stream()
                 .map(section -> {
-                    Course course = section.getCourse();  // 假设 Section 中有 getCourse()
+                    // 根据 section 中的 courseId 查找 Course 实体
+                    Optional<Course> courseOpt = courseRepository.findById(section.getCourseId());
+                    if (courseOpt.isEmpty()) return null;
 
-                    if (course == null) return null; // 防御性判断
+                    Course course = courseOpt.get();
 
                     CourseDTO dto = new CourseDTO();
                     dto.setCourseId(course.getCourseId());
                     dto.setTitle(course.getTitle());
                     dto.setDeptName(course.getDeptName());
                     dto.setCredits(course.getCredits());
-                    dto.setCourseIntroduction(course.getCourseIntroduction());
+                    dto.setCourseIntroduction(course.getIntroduction());
                     dto.setCapacity(course.getCapacity());
-                    dto.setRequiredRoomType(course.getRequiredRoomType());
-                    dto.setGradeYear(course.getGradeYear());
-                    dto.setPeriod(course.getPeriod());
+
+                    // 从 Section 获取剩余字段
+                    dto.setRequiredRoomType("Unknown"); // 假设没有直接字段就占位
+                    dto.setGradeYear(section.getYear());
+                    dto.setPeriod(1); // 待实现
 
                     return dto;
                 })
-                .filter(Objects::nonNull) // 过滤掉 null 的项
+                .filter(Objects::nonNull)
                 .collect(Collectors.toList());
     }
+
 
     @Override
     public CourseDTO addCourse(Section section) {
         if (!isTeacher()) {
             throw new SecurityException("仅教师可添加开课信息");
         }
+
         section.setTeacherId(getCurrentUserId());
-        sectionRepository.save(section);
-        return new CourseDTO(section);
+        Section savedSection = sectionRepository.save(section);
+
+        Optional<Course> courseOpt = courseRepository.findById(savedSection.getCourseId());
+        if (courseOpt.isEmpty()) {
+            throw new IllegalArgumentException("无法找到对应课程ID: " + savedSection.getCourseId());
+        }
+
+        Course course = courseOpt.get();
+
+        CourseDTO dto = new CourseDTO();
+        dto.setCourseId(course.getCourseId());
+        dto.setTitle(course.getTitle());
+        dto.setDeptName(course.getDeptName());
+        dto.setCredits(course.getCredits());
+        dto.setCourseIntroduction(course.getIntroduction());
+        dto.setCapacity(course.getCapacity());
+
+        dto.setRequiredRoomType("Unknown"); // 可按需设置
+        dto.setGradeYear(savedSection.getYear());
+        dto.setPeriod(1); // 可从 timeSlotId 中解析
+
+        return dto;
     }
+
 
     @Override
     public CourseDTO updateCourse(Section section) {
         if (!isTeacher()) {
             throw new SecurityException("仅教师可修改开课信息");
         }
+
         Section existing = sectionRepository.findById(section.getSectionId()).orElse(null);
         if (existing == null || existing.getTeacherId() != getCurrentUserId()) {
             throw new SecurityException("无权修改他人课程信息");
         }
+
         existing.setSemester(section.getSemester());
         existing.setYear(section.getYear());
         existing.setClassroomId(section.getClassroomId());
+        existing.setTimeSlotIdList(section.getTimeSlotIdList());  // 如果需要更新
+        existing.setTeacherId(section.getTeacherId());    // 如果允许更新教师ID
+
         sectionRepository.save(existing);
-        return new CourseDTO(existing);
+
+        Course course = courseRepository.findById(existing.getCourseId())
+                .orElseThrow(() -> new IllegalArgumentException("找不到对应课程"));
+
+        return toCourseDTO(existing, course);
     }
+
 
     @Override
     public void deleteCourse(int courseId) {
         if (!isTeacher()) {
             throw new SecurityException("仅教师可删除开课信息");
         }
-        Section section = sectionRepository.findById(courseId).orElse(null);
-        if (section == null || section.getTeacherId() != getCurrentUserId()) {
-            throw new SecurityException("无权删除该课程");
+        // 找到对应的 Section
+        Section section = sectionRepository.findById(courseId)
+                .orElseThrow(() -> new IllegalArgumentException("找不到对应的课程信息"));
+
+        // 判断是否为当前教师
+        if (section.getTeacherId() != getCurrentUserId()) {
+            throw new SecurityException("无权删除他人课程信息");
         }
-        if (!takeRepository.findBySectionId(courseId).isEmpty()) {
-            throw new IllegalStateException("存在关联选课记录，无法删除");
-        }
-        sectionRepository.delete(section);
+
+        sectionRepository.deleteById(courseId);
     }
 
     @Override
@@ -122,11 +167,42 @@ public class CourseServiceImpl implements CourseService {
         if (section == null || section.getTeacherId() != getCurrentUserId()) {
             throw new SecurityException("无权查看该课程");
         }
+
+        // 假设通过 section 获取对应的 Course 信息
+        Course course = courseRepository.findById(section.getCourseId()).orElse(null);
+        if (course == null) {
+            throw new IllegalStateException("课程不存在");
+        }
+
         List<Grade> grades = gradeRepository.findBySectionId(sectionId);
-        double average = grades.stream().mapToInt(Grade::getGrade).average().orElse(0);
-        Map<String, Long> distribution = grades.stream()
-                .collect(Collectors.groupingBy(Grade::getGradeType, Collectors.counting()));
-        return new CourseStatsDTO(average, distribution);
+        int totalStudents = grades.size();
+
+        // 计算平均分
+        double average = grades.stream()
+                .mapToInt(Grade::getGrade)
+                .average()
+                .orElse(0);
+
+        // 这里假设你有方法计算 GPA，比如 convertGradeToGpa
+        double gpa = grades.stream()
+                .mapToDouble(g -> convertGradeToGpa(g.getGrade()))
+                .average()
+                .orElse(0);
+
+        // 收集所有成绩
+        List<Integer> scores = grades.stream()
+                .map(Grade::getGrade)
+                .toList();
+
+        CourseStatsDTO dto = new CourseStatsDTO();
+        dto.setCourseId(course.getCourseId());
+        dto.setCourseName(course.getTitle());
+        dto.setAverage(average);
+        dto.setGpa(gpa);
+        dto.setTotalStudents(totalStudents);
+        dto.setScores(scores);
+
+        return dto;
     }
 
     @Override
@@ -138,10 +214,63 @@ public class CourseServiceImpl implements CourseService {
         if (section == null || section.getTeacherId() != getCurrentUserId()) {
             throw new SecurityException("无权查看该课程学生成绩");
         }
+
         List<Grade> grades = gradeRepository.findBySectionId(sectionId);
-        return grades.stream()
+
+        // 按成绩降序排序
+        List<Grade> sortedGrades = grades.stream()
                 .sorted((g1, g2) -> Integer.compare(g2.getGrade(), g1.getGrade()))
-                .map(g -> new StudentRankDTO(g.getTakeId(), g.getGrade()))
-                .collect(Collectors.toList());
+                .toList();
+
+        // 给学生排名
+        List<StudentRankDTO> rankList = new ArrayList<>();
+        int rank = 1;
+        for (Grade g : sortedGrades) {
+            StudentRankDTO dto = new StudentRankDTO();
+            dto.setRank(rank++);
+            dto.setStudentId(g.getTakeId());
+
+            String studentName = studentRepository.findById(g.getTakeId())
+                    .map(student -> personalInfoRepository.findById(student.getPersonalInfoId())
+                            .map(PersonalInfo::getName)
+                            .orElse("未知"))
+                    .orElse("未知");
+
+
+            dto.setStudentName(studentName);
+            dto.setScore(g.getGrade());
+            dto.setGpa(convertGradeToGpa(g.getGrade()));
+
+            rankList.add(dto);
+        }
+
+        return rankList;
     }
+
+    // 这里是示范用的分数转 GPA 方法，你可以替换成自己的逻辑
+    private double convertGradeToGpa(int grade) {
+        if (grade >= 90) return 4.0;
+        if (grade >= 80) return 3.0;
+        if (grade >= 70) return 2.0;
+        if (grade >= 60) return 1.0;
+        return 0.0;
+    }
+
+
+    private CourseDTO toCourseDTO(Section section, Course course) {
+        CourseDTO dto = new CourseDTO();
+        dto.setCourseId(course.getCourseId());
+        dto.setTitle(course.getTitle());
+        dto.setDeptName(course.getDeptName());
+        dto.setCredits(course.getCredits());
+        dto.setCourseIntroduction(course.getIntroduction());
+        dto.setCapacity(course.getCapacity());
+
+        dto.setRequiredRoomType("未知");  // 如果有数据则替换
+        dto.setGradeYear(section.getYear());
+        dto.setPeriod(1);  // 可根据timeSlotId解析真实课时数
+
+        return dto;
+    }
+
 }
